[tool.poetry]
name = "ttracker"
version = "0.1.0"
description = ""
authors = ["Eugene Prout <eugene.prout1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
click = "^8.1.7"

[tool.poetry.scripts]
ttracker = "ttracker.entrypoint:main"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
